--- a/TableroAPI/appsettings.json
+++ b/TableroAPI/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "_DB": "Server=sfp-dgmap1;Database=DGMAP;User Id=dgmap;Password=dgmap;"
+    "_DB": "Server=sfp-dgmap1;Database=;User Id=;Password=;"
   },
 
   "DataBaseObj": {
@@ -17,17 +17,17 @@
   },
 
   "SharePoint": {
-    "Servidor": "http://172.29.50.135:13882",
+    "Servidor": "",
     "Usuario": "DGAIS",
-    "Contraseña": "bAfu$Res7a",
-    "Dominio": "sfpappdev12.local",
+    "ContraseÃ±a": "",
+    "Dominio": ".local",
     "Folder": "Sistema de Transparencia SFP"
   },
 
   "Correo": {
-    "Servidor": "172.29.153.7",
-    "Puerto": "25",
-    "Usuario": "sit@funcionpublica.gob.mx",
-    "Contraseña": "mlaudino"
+    "Servidor": "",
+    "Puerto": "",
+    "Usuario": "",
+    "ContraseÃ±a": ""
   }
 }
