--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+TableroAPI/appsettings.json
+TableroAdmin/ClientApp/package.json
+TableroAdmin/ClientApp/package-lock.json
