--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 TableroAPI/appsettings.json
 TableroAdmin/ClientApp/package.json
 TableroAdmin/ClientApp/package-lock.json
+TableroAPI/appsettings.json
