--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ TableroAPI/appsettings.json
 TableroAdmin/ClientApp/package.json
 TableroAdmin/ClientApp/package-lock.json
 TableroAPI/appsettings.json
+TableroAPI/appsettings.json
