--- a/WebApplication10/WebApplication10/ClientApp/package.json
+++ b/WebApplication10/WebApplication10/ClientApp/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
+    "react-sortable-tree": "^2.2.0",
+    "react-sortable-tree ": "2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
